--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,17 +2,22 @@
 <html lang="en">
 
 	<head>
+
 		<meta charset="utf-8">
 		<meta name="theme-color" content="#000000">
 		<meta name="description" content="{{ page.description }}">
+
 		<title>{{ page.title }}</title>
+
+
+		<style>{% include site.css %}</style>
+		<style>{% include highlight.css %}</style>
+
 	</head>
 
 	<body>
 
 		{% include header.html %}
-
-		<h1>post</h1>
 
 		<article>
 			 {{ content }}
