--- a/_includes/site.css
+++ b/_includes/site.css
@@ -45,3 +45,20 @@ h6 {
 	border: 1px solid #ddd;
 	padding: 0 10px;
 }
+
+@media only screen and (max-width:768px) {
+	body {
+		padding: 0 20px
+	}
+	footer,
+	header,
+	nav {
+		text-align: center
+	}
+}
+
+@media print {
+	body {
+		padding: 50px auto
+	}
+}
