--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,9 +9,8 @@
 
 		<title>{{ page.title }}</title>
 
-		<link rel="stylesheet" href="/assets/css/style.css">
-
-		<style>{% include site.css %}</style>
+		<link rel="stylesheet" href="/assets/highlight.css">
+		<link rel="stylesheet" href="/assets/site.css">
 
 	</head>
 
