--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,7 +9,8 @@
 
 		<title>{{ page.title }}</title>
 
-		<style>{% include site.css %}</style>
+		<link rel="stylesheet" href="/assets/highlight.css">
+		<link rel="stylesheet" href="/assets/site.css">
 
 	</head>
 
