--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,9 +9,8 @@
 
 		<title>{{ page.title }}</title>
 
-
-		<style>{% include site.css %}</style>
-		<style>{% include highlight.css %}</style>
+		<link rel="stylesheet" href="/assets/highlight.css">
+		<link rel="stylesheet" href="/assets/site.css">
 
 	</head>
 
