--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,13 @@
 		{% include header.html %}
 
 		<article>
-			 {{ content }}
+
+			<h1>{{ page.title }}</h1>
+
+			<time datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: '%A, %B %-d, %Y' }}</time>
+
+			{{ content }}
+
 		</article>
 
 		{% include footer.html %}
