--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,13 @@
 <header>
-	@@header@@
+	<a href="/">@mitjafelicijan</a>
 </header>
+
+<nav>
+	<ul>
+		<li><a href="//gist.github.com/mitjafelicijan" target="_blank" rel="noopener">gists</a></li>
+		<li><a href="//github.com/mitjafelicijan" target="_blank" rel="noopener">github</a></li>
+		<li><a href="//twitter.com/mitjafelicijan" target="_blank" rel="noopener">twitter</a></li>
+		<li><a href="//plus.google.com/+MitjaFelicijan?rel=author" target="_blank" rel="noopener">google+</a></li>
+		<li><a href="/curriculum-vitae">curriculum vitae</a></li>
+	</ul>
+</nav>
