--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,12 +5,15 @@
 
 		<meta charset="utf-8">
 		<meta name="theme-color" content="#000000">
-		<meta name="description" content="{{ page.description }}">
+		<meta name="author" content="{{ site.author }}">
+		<meta name="description" content="{{ site.description }}">
 
 		<title>{{ page.title }}</title>
 
 		<link rel="stylesheet" href="/assets/highlight.css">
 		<link rel="stylesheet" href="/assets/site.css">
+
+		<link rel="icon" type="image/jpeg" href="/assets/avatar.jpg">
 
 	</head>
 
@@ -28,6 +31,7 @@
 				</li>
 				{% endfor %}
 			</ul>
+
 		</main>
 
 		{% include footer.html %}
