--- a/assets/site.css
+++ b/assets/site.css
@@ -1,7 +1,5 @@
-html,
-body {
-	margin: 0;
-	padding: 0;
+* {
+	box-sizing: border-box
 }
 
 body {
@@ -10,14 +8,47 @@ body {
 	margin: 40px auto;
 	line-height: 1.6;
 	color: #000;
+	margin: 0;
+	padding: 0;
 }
 
 article,
 main,
 footer,
+nav,
 header {
 	max-width: 800px;
 	margin: 0 auto;
+}
+
+header {
+	margin-top: 30px;
+}
+
+header a,
+nav ul li a {
+	text-decoration: none
+}
+
+header a {
+	font-size: 150%;
+	font-weight: 700;
+	color: #000;
+}
+
+nav ul {
+	margin-top: 10px;
+	padding: 0;
+}
+
+nav ul li {
+	display: inline-block;
+}
+
+nav ul li a {
+	color: #888;
+	font-size: 85%;
+	margin-right: 10px;
 }
 
 h1 {
@@ -25,23 +56,15 @@ h1 {
 }
 
 h2 {
-	font-size: 180%;
-}
-
-h3 {
 	font-size: 160%;
 }
 
-h4 {
+h3 {
 	font-size: 140%;
 }
 
-h5 {
+h4 {
 	font-size: 120%;
-}
-
-h6 {
-	font-size: 100%;
 }
 
 article img {
@@ -60,10 +83,14 @@ main ul {
 	padding: 0 20px;
 }
 
-}
-
 main ul div {
 	font-size: 115%;
+}
+
+blockquote {
+	margin: 40px 0 40px 20px;
+	border-left: 5px solid #eee;
+	padding: 5px 0 10px 20px
 }
 
 .highlighter-rouge {
