--- a/assets/site.css
+++ b/assets/site.css
@@ -9,7 +9,7 @@ body {
 	line-height: 1.6;
 	color: #000;
 	margin: 0;
-	padding: 0;
+	padding: 0 0 50px 0;
 }
 
 article,
@@ -96,7 +96,7 @@ main ul div {
 blockquote {
 	margin: 40px 0 40px 20px;
 	border-left: 5px solid #eee;
-	padding: 5px 0 10px 20px
+	padding: 5px 0 10px 20px;
 }
 
 .highlighter-rouge {
@@ -104,22 +104,23 @@ blockquote {
 	padding: 0 15px;
 	font-size: 80%;
 	border: 2px solid #f1f1f1;
-	border-radius: 2px
+	border-radius: 2px;
+	overflow: auto;
 }
 
 ::selection {
 	background: #ff0;
-	color: #000
+	color: #000;
 }
 
 ::-moz-selection {
 	background: #ff0;
-	color: #000
+	color: #000;
 }
 
 @media only screen and (max-width:768px) {
 	body {
-		padding: 0 20px
+		padding: 0 20px;
 	}
 	footer,
 	header,
