--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,10 @@
 	<head>
 
 		<meta charset="utf-8">
+
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+
 		<meta name="theme-color" content="#000000">
 		<meta name="author" content="{{ site.author }}">
 		<meta name="description" content="{{ page.description }}">
