--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -19,6 +19,12 @@
 
 		<link rel="icon" type="image/jpeg" href="/assets/avatar.jpg">
 
+		<meta name="og:url" content="https://mitjafelicijan.com">
+		<meta name="og:type" content="website">
+		<meta name="og:title" content="{{ site.title }}">
+		<meta name="og:description" content="{{ page.description }}">
+		<meta name="og:image" content="https://mitjafelicijan.com/assets/avatar.jpg">
+
 	</head>
 
 	<body>
