--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,7 +20,7 @@
 		<link rel="icon" type="image/jpeg" href="/assets/avatar.jpg">
 
 		<meta name="og:url" content="https://mitjafelicijan.com/{{ page.slug }}">
-		<meta name="og:type" content="article">
+		<meta name="og:type" content="website">
 		<meta name="og:title" content="{{ page.title }}">
 		<meta name="og:description" content="{{ page.description }}">
 		<meta name="og:image" content="https://mitjafelicijan.com/assets/avatar.jpg">
