--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -17,13 +17,13 @@
 		<link rel="stylesheet" href="/assets/highlight.css">
 		<link rel="stylesheet" href="/assets/site.css">
 
-		<link rel="icon" type="image/jpeg" href="/assets/avatar.jpg">
+		<link rel="icon" type="image/gif" href="/assets/avatar.gif">
 
 		<meta name="og:url" content="https://mitjafelicijan.com">
 		<meta name="og:type" content="website">
 		<meta name="og:title" content="{{ site.title }}">
 		<meta name="og:description" content="{{ page.description }}">
-		<meta name="og:image" content="https://mitjafelicijan.com/assets/avatar.jpg">
+		<meta name="og:image" content="https://mitjafelicijan.com/assets/avatar.gif">
 
 	</head>
 
