--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
 
-		<meta name="theme-color" content="#000000">
+		<meta name="theme-color" content="#ffffff">
 		<meta name="author" content="{{ site.author }}">
 		<meta name="description" content="{{ page.description }}">
 
