--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,6 +47,30 @@
 
 			{{ content }}
 
+			<div id="HCB_comment_box" class="comments">Loading comments ...</div>
+			<script type="text/javascript" id="hcb">
+				if (!window.hcb_user) {
+					hcb_user = {
+						logout_link: "logout",
+						admin_link: "admin",
+						reply: "reply",
+						flag: "flag",
+						like: "like",
+						prev_page: "prev",
+						next_page: "next",
+					};
+				}
+				hcb_user.PAGE = "https://mitjafelicijan.com/";
+				(function() {
+					var s = document.createElement("script"),
+						l = hcb_user.PAGE || ("" + window.location).replace(/'/g, "%27"),
+						h = "//www.htmlcommentbox.com";
+					s.setAttribute("type", "text/javascript");
+					s.setAttribute("src", h + "/jread?page=" + encodeURIComponent(l).replace("+", "%2B") + "&mod=%241%24wq1rdBcg%24MpQDCL74rJm9DREvceKL%2F1" + "&opts=16399&num=10&ts=1490664489345");
+					if (typeof s != "undefined") document.getElementsByTagName("head")[0].appendChild(s);
+				})();
+			</script>
+
 		</article>
 
 		{% include footer.html %}
