--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -14,8 +14,12 @@
 
 		<title>{{ page.title }}</title>
 
-		<link rel="stylesheet" href="/assets/highlight.css?ver={{ site.cache_version }}">
-		<link rel="stylesheet" href="/assets/site.css?ver={{ site.cache_version }}">
+		<style>
+			article,main, footer, nav, header { max-width: 700px; margin: 0 auto; }
+		</style>
+
+		<link rel="stylesheet" href="/assets/highlight.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
+		<link rel="stylesheet" href="/assets/site.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
 
 		<link rel="icon" type="image/gif" href="/{{ site.avatar }}?ver={{ site.cache_version }}">
 
