--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -14,10 +14,6 @@
 
 		<title>{{ page.title }}</title>
 
-		<style>
-			article,main, footer, nav, header { max-width: 700px; margin: 0 auto; }
-		</style>
-
 		<link rel="stylesheet" href="/assets/highlight.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
 		<link rel="stylesheet" href="/assets/site.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
 
@@ -57,6 +53,10 @@
 		</main>
 
 		{% include footer.html %}
+
+		<style>
+			{% include site.css %}
+		</style>
 
 	</body>
 
