--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,9 +14,7 @@
 
 		<title>{{ page.title }}</title>
 
-		<style>
-			article,main, footer, nav, header { max-width: 700px; margin: 0 auto; }
-		</style>
+
 
 		<link rel="stylesheet" href="/assets/highlight.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
 		<link rel="stylesheet" href="/assets/site.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
@@ -50,6 +48,10 @@
 		</article>
 
 		{% include footer.html %}
+
+		<style>
+			{% include site.css %}
+		</style>
 
 	</body>
 
