--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,12 +14,7 @@
 
 		<title>{{ page.title }}</title>
 
-		<style>
-			article,main, footer, nav, header { max-width: 700px; margin: 0 auto; }
-		</style>
-
 		<link rel="stylesheet" href="/assets/highlight.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
-		<link rel="stylesheet" href="/assets/site.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
 
 		<link rel="icon" type="image/gif" href="/{{ site.avatar }}?ver={{ site.cache_version }}">
 
@@ -38,8 +33,6 @@
 	</head>
 
 	<body>
-
-	{{ site.icon }}
 
 		{% include header.html %}
 
@@ -78,6 +71,10 @@
 		</article>
 
 		{% include footer.html %}
+
+		<style>
+			{% include site.css %}
+		</style>
 
 	</body>
 
