--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,8 @@
 		<meta name="twitter:description" content="{{ page.description }}">
 		<meta name="twitter:image" content="https://mitjafelicijan.com/{{ site.avatar }}?ver={{ site.cache_version }}">
 
+		<style>{% include site.min.css %}</style>
+
 	</head>
 
 	<body>
@@ -71,10 +73,6 @@
 		</article>
 
 		{% include footer.html %}
-
-		<style>
-			{% include site.css %}
-		</style>
 
 	</body>
 
