--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -31,6 +31,8 @@
 		<meta name="twitter:description" content="{{ site.description }}">
 		<meta name="twitter:image" content="https://mitjafelicijan.com/{{ site.avatar }}?ver={{ site.cache_version }}">
 
+		<style>{% include site.min.css %}</style>
+
 	</head>
 
 	<body>
@@ -53,10 +55,6 @@
 		</main>
 
 		{% include footer.html %}
-
-		<style>
-			{% include site.css %}
-		</style>
 
 	</body>
 
