--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,8 +16,6 @@
 
 		<link rel="stylesheet" href="/assets/highlight.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
 
-		<link rel="icon" type="image/gif" href="/{{ site.avatar }}?ver={{ site.cache_version }}">
-
 		<meta name="og:url" content="https://mitjafelicijan.com/{{ page.slug }}">
 		<meta name="og:type" content="website">
 		<meta name="og:title" content="{{ page.title }}">
@@ -31,6 +29,7 @@
 		<meta name="twitter:image" content="https://mitjafelicijan.com/{{ site.avatar }}?ver={{ site.cache_version }}">
 
 		<style>{% include site.min.css %}</style>
+		<style>{% include highlight.min.css %}</style>
 
 	</head>
 
