--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,11 +14,6 @@
 
 		<title>{{ page.title }}</title>
 
-
-
-		<link rel="stylesheet" href="/assets/highlight.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
-		<link rel="stylesheet" href="/assets/site.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
-
 		<link rel="icon" type="image/gif" href="/{{ site.avatar }}?ver={{ site.cache_version }}">
 
 		<meta name="og:url" content="https://mitjafelicijan.com/{{ page.slug }}">
@@ -34,6 +29,7 @@
 		<meta name="twitter:image" content="https://mitjafelicijan.com/{{ site.avatar }}?ver={{ site.cache_version }}">
 
 		<style>{% include site.min.css %}</style>
+		<style>{% include highlight.min.css %}</style>
 
 	</head>
 
