--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -28,8 +28,10 @@
 		<meta name="twitter:description" content="{{ site.description }}">
 		<meta name="twitter:image" content="https://mitjafelicijan.com/{{ site.avatar }}?ver={{ site.cache_version }}">
 
-		<style>{% include site.min.css %}</style>
-		<style>{% include highlight.min.css %}</style>
+		<style>
+			{% include site.min.css %}
+			{% include highlight.min.css %}
+		</style>
 
 	</head>
 
