--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@
 
 		<title>{{ page.title }}</title>
 
-		<link rel="stylesheet" href="/assets/highlight.css?ver={{ site.cache_version }}" media="none" onload="if(media!='all')media='all'">
+		<link rel="icon" type="image/gif" href="/{{ site.avatar }}?ver={{ site.cache_version }}">
 
 		<meta name="og:url" content="https://mitjafelicijan.com/{{ page.slug }}">
 		<meta name="og:type" content="website">
