--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
 
-		<meta name="theme-color" content="#ff0ff0">
+		<meta name="theme-color" content="{{ site.theme_color }}">
 		<meta name="author" content="{{ site.author }}">
 		<meta name="description" content="{{ site.description }}">
 
