--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,3 +19,18 @@
 		}
 	});
 </script>
+
+<!-- Social Profile -->
+<script type="application/ld+json">
+{
+	"@context": "http://schema.org",
+	"@type": "Person",
+	"name": "Mitja Felicijan",
+	"url": "http://mitjafelicijan.com",
+	"sameAs": [
+		"https://github.com/mitjafelicijan",
+		"https://twitter.com/mitjafelicijan",
+		"https://plus.google.com/+MitjaFelicijan"
+	]
+}
+</script>
