--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,16 @@
 	});
 </script>
 
+<!-- Open external links in new tab -->
+<script>
+	let links = document.links;
+	for (let i = 0, linksLength = links.length; i < linksLength; i++) {
+		if (links[i].hostname != window.location.hostname) {
+			links[i].target = '_blank';
+		}
+	}
+</script>
+
 <!-- Social Profile -->
 <script type="application/ld+json">
 {
