--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
 	}
 </script>
 
-<!-- Social Profile -->
+<!-- Linked data - Social profile -->
 <script type="application/ld+json">
 {
 	"@context": "http://schema.org",
