--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,6 +36,7 @@
 	"@context": "http://schema.org",
 	"@type": "Person",
 	"name": "Mitja Felicijan",
+	"jobTitle": "Embedded systems developer",
 	"url": "http://mitjafelicijan.com",
 	"sameAs": [
 		"https://github.com/mitjafelicijan",
