--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,7 @@
 	for (let i = 0, linksLength = links.length; i < linksLength; i++) {
 		if (links[i].hostname != window.location.hostname) {
 			links[i].target = '_blank';
+			links[i].setAttribute('rel', 'noopener');
 		}
 	}
 </script>
