--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -28,6 +28,8 @@
 		<meta name="twitter:description" content="{{ site.description }}">
 		<meta name="twitter:image" content="{{ site.domain }}{{ site.avatar }}?ver={{ site.cache_version }}">
 
+		<link rel="manifest" href="/assets/manifest.json?ver={{ site.cache_version }}">
+
 		<style>
 			{% include site.min.css %}
 			{% include highlight.min.css %}
