--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,3 +46,14 @@
 	]
 }
 </script>
+
+<!-- Service worker -->
+<script>
+	if('serviceWorker' in navigator) {
+	navigator.serviceWorker
+		.register('/assets/sw.js')
+		.then(function() {
+			console.log('Service Worker Registered');
+		});
+	}
+</script>
