--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,6 +77,7 @@
 
 		{% include footer.html %}
 
+		<!-- Linked data - Article -->
 		<script type="application/ld+json">
 			{
 				"@context": "http://schema.org",
