--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,7 +51,7 @@
 <script>
 	if('serviceWorker' in navigator) {
 	navigator.serviceWorker
-		.register('/assets/sw.js')
+		.register('/sw.js')
 		.then(function() {
 			console.log('Service Worker Registered');
 		});
