--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
 	"@type": "Person",
 	"name": "Mitja Felicijan",
 	"jobTitle": "Embedded systems developer",
-	"url": "http://mitjafelicijan.com",
+	"url": "https://mitjafelicijan.com",
 	"sameAs": [
 		"https://github.com/mitjafelicijan",
 		"https://twitter.com/mitjafelicijan",
