--- a/_includes/site.css
+++ b/_includes/site.css
@@ -77,10 +77,13 @@ time {
 	color: #444;
 }
 
+ul {
+	list-style-type: square;
+}
+
 main ul {
 	margin-top: 30px;
 	padding: 0 20px;
-	list-style-type: square;
 }
 
 main ul li {
