--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,8 @@
 		<meta name="theme-color" content="{{ site.theme_color }}">
 		<meta name="author" content="{{ site.author }}">
 		<meta name="description" content="{{ page.description }}">
+		
+		<meta name="google-site-verification" content="EwUGW1WlCkRIQuyQ9AE1-bLitWthw-eVMZFTAMZVZaA">
 
 		<title>{{ page.title }}</title>
 
