--- a/tools/draw/app.css
+++ b/tools/draw/app.css
@@ -38,21 +38,36 @@ canvas {
 	height: 100%;
 }
 
-nav {
+button {
+	display: block;
+	background: #fff;
+	border-radius: 5px;
+	width: 100%;
+	margin-bottom: 10px;
+	font-weight: bold;
+	cursor: pointer;
+	text-align: center;
+}
+
+nav.colors {
 	position: fixed;
 	left: 10px;
 	top: 10px;
-	width: 100px;
+	width: 40px;
 }
 
-nav button {
-	border: 2px dashed #bbb;
-	background: #fff;
-	border-radius: 5px;
-	display: block;
-	width: 100%;
-	margin-bottom: 10px;
-	padding: 10px 5px;
-	font-weight: bold;
-	cursor: pointer;
+nav.colors button {
+	height: 40px;
+}
+
+nav.tools {
+	position: fixed;
+	left: 10px;
+	bottom: 10px;
+	width: 65px;
+}
+
+nav.tools button {
+	border: 2px solid #bbb;
+	padding: 10px 0;
 }
