--- a/tools/draw/app.css
+++ b/tools/draw/app.css
@@ -15,6 +15,7 @@
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
 	font-family: Arial, Helvetica, sans-serif;
+	user-select: none;
 }
 
 body {
