--- a/slides/presentations/example/default.pug
+++ b/slides/presentations/example/default.pug
@@ -3,8 +3,6 @@ section
   p September 21, 2018
   a(href="https://twitter.com/mitjafelicijan") @mitjafelicijan
 
-
-
 section.center
   q We Cannot Solve Our Problems With The Same Thinking We Used When We Created Them.
   footer — Albert Einstein
@@ -38,6 +36,12 @@ section
       |     hljs.highlightBlock(block);
       |   });
       | });
+
+  hr
+  figcaption.right Step 1: Finding nearest point
+
+  div.center
+    img(src="presentations/example/drawing1.svg")
 
   hr
   figcaption.right Step 1: Finding nearest point
