--- a/slides/presentations/example/default.pug
+++ b/slides/presentations/example/default.pug
@@ -21,6 +21,19 @@ section
     li Brute force solutions we make are usually not optimized
 
 
+section
+  h3 Grid example
+  div.grid.col-1-1
+    div Lipsum
+    div Lipsum
+
+  div.grid.col-2-1
+    div Lipsum
+    div Lipsum
+
+  div.grid.col-1-2
+    div Lipsum
+    div Lipsum
 
 section
   h2 Basic linear algebra
