--- a/slides/presentations/basic-math-in-programming/default.pug
+++ b/slides/presentations/basic-math-in-programming/default.pug
@@ -1,6 +1,6 @@
 section
   h1 Why understanding of basic math is imporant for computer programing
-  p September 21, 2018
+  p September 21, 2018, rev2
   a(href="https://twitter.com/mitjafelicijan") @mitjafelicijan
 
 
