--- a/slides/presentations/basic-math-in-programming/default.pug
+++ b/slides/presentations/basic-math-in-programming/default.pug
@@ -28,7 +28,7 @@ section
   hr
 
   div.center
-    img(src="levenshtein-distance.svg")
+    img(src="levenshtein-distance.svg", height="150")
 
   hr
 
