--- a/slides/presentations/basic-math-in-programming/default.pug
+++ b/slides/presentations/basic-math-in-programming/default.pug
@@ -51,9 +51,12 @@ section
 
   h4 Going further
   ol
-    li https://en.wikibooks.org/wiki/Algorithm_Implementation/Strings/Levenshtein_distance
-    li https://en.wikipedia.org/wiki/Levenshtein_distance
-    li https://rosettacode.org/wiki/Levenshtein_distance
+    li
+      a(href="https://en.wikibooks.org/wiki/Algorithm_Implementation/Strings/Levenshtein_distance") https://en.wikibooks.org/wiki/Algorithm_Implementation/Strings/Levenshtein_distance
+    li
+      a(href="https://en.wikipedia.org/wiki/Levenshtein_distance") https://en.wikipedia.org/wiki/Levenshtein_distance
+    li
+      a(href="https://rosettacode.org/wiki/Levenshtein_distance") https://rosettacode.org/wiki/Levenshtein_distance
 
 
 
