--- a/slides/presentations/basic-math-in-programming/default.pug
+++ b/slides/presentations/basic-math-in-programming/default.pug
@@ -3,7 +3,13 @@ section
   p September 21, 2018, rev2
   a(href="https://twitter.com/mitjafelicijan") @mitjafelicijan
 
-
+section
+  h2 Agenda
+  ol
+    li Levenshtein distance
+    li Shortest path algorithm
+    li Distance Formula
+    li
 
 section.center
   q We Cannot Solve Our Problems With The Same Thinking We Used When We Created Them.
@@ -29,6 +35,11 @@ section
 
   div.center
     img(src="levenshtein-distance.svg", height="150")
+
+  hr
+
+  div.center
+    img(src="test.png")
 
   hr
 
