--- a/_includes/site.css
+++ b/_includes/site.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&subset=latin-ext");
+
 * {
 	box-sizing: border-box;
 }
 
 body {
-	font-family: 'Times New Roman', Times, serif;
+	font-family: 'Roboto', 'Times New Roman', Times, serif;
 	font-size: 16px;
 	line-height: 1.8;
 	color: #000;
