--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,7 +51,7 @@
 
 			{{ content }}
 
-			<div id="HCB_comment_box" class="comments">Loading comments ...</div>
+			<!--<div id="HCB_comment_box" class="comments">Loading comments ...</div>
 			<script type="text/javascript" id="hcb">
 				if (!window.hcb_user) {
 					hcb_user = {
@@ -73,7 +73,7 @@
 					s.setAttribute("src", h + "/jread?page=" + encodeURIComponent(l).replace("+", "%2B") + "&mod=%241%24wq1rdBcg%24MpQDCL74rJm9DREvceKL%2F1" + "&opts=16399&num=10&ts=1490664489345");
 					if (typeof s != "undefined") document.getElementsByTagName("head")[0].appendChild(s);
 				})();
-			</script>
+			</script>-->
 
 		</article>
 
