--- a/_includes/site.css
+++ b/_includes/site.css
@@ -15,7 +15,6 @@ body {
 
 a {
 	color: #000;
-	text-decoration: none;
 }
 
 article,
@@ -103,6 +102,7 @@ main ul li {
 main ul li a {
 	font-size: 100%;
 	font-weight: 500;
+	text-decoration: none;
 }
 
 main ul div {
@@ -180,6 +180,10 @@ ol li::before {
 	margin-left: -1.5em;
 	margin-right: 0.9em;
 	text-align: right;
+}
+
+ol li a {
+	text-decoration: none;
 }
 
 /* commenting */
